# ai-tools

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.trunk/: .gitignore  trunk.yaml
.trunk/actions/trunk-cache-prune/: 2025-06-26-15-09-13.736.yaml  2025-06-26-16-09-13.20.yaml
.trunk/actions/trunk-share-with-everyone/: 2025-06-26-15-09-13.694.yaml  2025-06-26-15-21-07.286.yaml  2025-06-26-16-09-13.20.yaml
.trunk/actions/trunk-single-player-auto-on-upgrade/: 2025-06-26-15-14-17.991.yaml  2025-06-26-16-09-13.21.yaml
.trunk/actions/trunk-single-player-auto-upgrade/: 2025-06-26-16-14-17.91.yaml
.trunk/actions/trunk-upgrade-available/: 2025-06-26-15-14-19.75.yaml  2025-06-26-16-09-13.19.yaml  2025-06-26-16-14-17.83.yaml
.trunk/actions/trunk-whoami/: 2025-06-26-16-14-17.92.yaml
.trunk/notifications/: trunk-upgrade.yaml
.trunk/tools/: bandit.bat  black.bat  checkov.bat  hadolint.bat  isort.bat  markdownlint.bat  prettier.bat  ruff.bat  taplo.bat  trufflehog.bat  trunk
scripts/: README.md  git-amend-author-and-sign.sh
src/app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcp_server/: main.py
src/mcp_tools/common/: git_utils.py
src/mcp_tools/config_optimizer/: README.md  cli.py  config.py  models.py
src/mcp_tools/echo_tool/: client.py
src/mcp_tools/git_compliance_analyzer/: README.md  cli.py  config.py  models.py
src/mcp_tools/gpg_github_tool/: README.md  key_manager.py
src/mcp_tools/iac_doc_generator/: cli.py  (+4 more)
tests/integration/: test_echo_tool.py
tests/unit/: test_server.py
(+51 files in other folders)
