[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "httpx>=0.27.0,<0.28.0", # Adding httpx as a core dependency
    "python-gnupg>=0.5.0,<0.6.0",
    "PyYAML>=6.0,<7.0",
    "GitPython>=3.1.0,<3.2.0",
    "pydantic>=2.0,<3.0",
    "python-hcl2>=4.0,<5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.27.0,<0.28.0"
]

[tool.pytest.ini_options]
pythonpath = [
    "." # Add current directory (project root) to PYTHONPATH
]
# You can also specify testpaths if your tests are not in the default locations
# testpaths = [
# "tests",
# ]

[tool.black]
line-length = 100
